# python-reversi

./: main.py  models.py  pyproject.toml  test_reversi.py  view.py
models/: __init__.py  board.py  place.py  player.py
