[tool.poetry]
name = "reversi"
version = "0.1.0"
description = "Python reversi"
authors = ["yuhei_kajima <yuhei_kajima@nuco.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
